--- a/directbak.yaml
+++ b/directbak.yaml
@@ -223,6 +223,7 @@ payload:
   - '+.028office.com'
   - '+.028pxw.com'
   - '+.028sjkj.com'
+  - '+.028wzjs.com'
   - '+.029558.com'
   - '+.029900.com'
   - '+.029jiuda.com'
@@ -1588,6 +1589,7 @@ payload:
   - '+.181ps.com'
   - '+.181ue.com'
   - '+.182208.com'
+  - '+.18375.com'
   - '+.183me.com'
   - '+.183post.com'
   - '+.183read.com'
@@ -3118,6 +3120,7 @@ payload:
   - '+.3g567.com'
   - '+.3gdisk.com'
   - '+.3glasses.com'
+  - '+.3gmfw.com'
   - '+.3gmimo.com'
   - '+.3gogogo.com'
   - '+.3gosc.com'
@@ -3368,6 +3371,7 @@ payload:
   - '+.45r.com'
   - '+.45win.com'
   - '+.45xie.com'
+  - '+.45yx.com'
   - '+.462546.com'
   - '+.46412.com'
   - '+.46466.me'
@@ -4866,7 +4870,6 @@ payload:
   - '+.5see.com'
   - '+.5sem.com'
   - '+.5sha.com'
-  - '+.5sharing.com'
   - '+.5snow.com'
   - '+.5stmt.com'
   - '+.5sw.com'
@@ -5569,7 +5572,6 @@ payload:
   - '+.7937.com'
   - '+.7940.com'
   - '+.79432.com'
-  - '+.794579.com'
   - '+.795674.com'
   - '+.7958.net'
   - '+.7979u.com'
@@ -5672,6 +5674,7 @@ payload:
   - '+.7r7z.com'
   - '+.7road.com'
   - '+.7road.net'
+  - '+.7ronggame.com'
   - '+.7runto.com'
   - '+.7rv.net'
   - '+.7sdn.com'
@@ -6107,7 +6110,6 @@ payload:
   - '+.8da.com'
   - '+.8ddao.com'
   - '+.8dexpress.com'
-  - '+.8dlive.com'
   - '+.8dn.com'
   - '+.8dol.com'
   - '+.8dp.net'
@@ -6341,6 +6343,7 @@ payload:
   - '+.91money.com'
   - '+.91muzhi.com'
   - '+.91ndeh.xyz'
+  - '+.91ninthpalace.com'
   - '+.91nzh.com'
   - '+.91open.com'
   - '+.91pandian.com'
@@ -6439,6 +6442,7 @@ payload:
   - '+.929825.com'
   - '+.92987.com'
   - '+.9299.net'
+  - '+.929g.com'
   - '+.92aliyun.com'
   - '+.92anycall.com'
   - '+.92aq.com'
@@ -8407,7 +8411,6 @@ payload:
   - '+.anquan35.com'
   - '+.anquanbao.com'
   - '+.anquanke.com'
-  - '+.anquanquan.info'
   - '+.anquantong.com'
   - '+.anrayer.com'
   - '+.anren.org'
@@ -8888,6 +8891,7 @@ payload:
   - '+.artproglobal.com'
   - '+.artrade.com'
   - '+.artron.net'
+  - '+.artronartdata.com'
   - '+.artronimages.com'
   - '+.artrus.net'
   - '+.arts-nj.com'
@@ -9337,7 +9341,6 @@ payload:
   - '+.bagb2b.com'
   - '+.bagesoft.net'
   - '+.bagevent.com'
-  - '+.bagew.com'
   - '+.bageyalu.com'
   - '+.bags163.com'
   - '+.bagtree.com'
@@ -15152,7 +15155,6 @@ payload:
   - '+.cnetea.net'
   - '+.cnetec.com'
   - '+.cnetsec.com'
-  - '+.cneuol.com'
   - '+.cnevi.com'
   - '+.cnexp.net'
   - '+.cnexps.com'
@@ -16415,6 +16417,7 @@ payload:
   - '+.ctocio.com'
   - '+.ctoclub.com'
   - '+.ctoutiao.com'
+  - '+.ctqcw.com'
   - '+.ctracer.net'
   - '+.ctrip-lvyou.com'
   - '+.ctrip-ttd.hk'
@@ -19619,6 +19622,7 @@ payload:
   - '+.echashi.com'
   - '+.echatsoft.com'
   - '+.echead.com'
+  - '+.echepiao.com'
   - '+.echiele.com'
   - '+.echinacareers.com'
   - '+.echinacities.com'
@@ -21212,7 +21216,6 @@ payload:
   - '+.feihuo.com'
   - '+.feihutaoke.com'
   - '+.feiin.com'
-  - '+.feiji666nihao.com'
   - '+.feijiu.net'
   - '+.feijizu.com'
   - '+.feikongbao.com'
@@ -22606,7 +22609,6 @@ payload:
   - '+.gaokaopai.com'
   - '+.gaokaoq.com'
   - '+.gaokaozhiku.com'
-  - '+.gaokeyan.com'
   - '+.gaokin.com'
   - '+.gaokowl.com'
   - '+.gaokw.com'
@@ -22688,7 +22690,6 @@ payload:
   - '+.gbtags.com'
   - '+.gbtranswins.com'
   - '+.gbw114.com'
-  - '+.gc-repair.com'
   - '+.gc-zb.com'
   - '+.gc1616.com'
   - '+.gc39.com'
@@ -23092,7 +23093,6 @@ payload:
   - '+.ghost008.com'
   - '+.ghost11.com'
   - '+.ghost123.com'
-  - '+.ghost580.net'
   - '+.ghost64.com'
   - '+.ghostchina.com'
   - '+.ghostsf.com'
@@ -23950,6 +23950,7 @@ payload:
   - '+.guangmingjx.com'
   - '+.guangshantang.vip'
   - '+.guangsuss.com'
+  - '+.guangtuikeji.com'
   - '+.guanguser.com'
   - '+.guangwaifu.com'
   - '+.guangwangye.com'
@@ -25473,6 +25474,7 @@ payload:
   - '+.hcnamecdns.com'
   - '+.hcocoa.com'
   - '+.hcqixinhb.com'
+  - '+.hcrlm.com'
   - '+.hcshebao.com'
   - '+.hcsilk.com'
   - '+.hctxf.org'
@@ -27628,6 +27630,7 @@ payload:
   - '+.huoju365.com'
   - '+.huokebao.net'
   - '+.huokesoft.com'
+  - '+.huokeying.com'
   - '+.huolala.co'
   - '+.huolan.net'
   - '+.huolea.com'
@@ -30135,7 +30138,6 @@ payload:
   - '+.izjj.com'
   - '+.izmzg.com'
   - '+.izstz.com'
-  - '+.izt6.com'
   - '+.izt8.com'
   - '+.iztwp.com'
   - '+.izuche.com'
@@ -31354,6 +31356,7 @@ payload:
   - '+.jiwa123.com'
   - '+.jiwanjiwan.com'
   - '+.jiweichengzhu.com'
+  - '+.jiweixin168.com'
   - '+.jiwu.com'
   - '+.jiwudai.com'
   - '+.jixia.ink'
@@ -31677,6 +31680,7 @@ payload:
   - '+.jojoreading.com'
   - '+.joker.li'
   - '+.jolimark.com'
+  - '+.joloplay.com'
   - '+.jomodns.com'
   - '+.jomoxc.com'
   - '+.jonahome.net'
@@ -32213,6 +32217,7 @@ payload:
   - '+.jussevent.com'
   - '+.jusstickets.com'
   - '+.jussyun.com'
+  - '+.just-glendale.com'
   - '+.just4coding.com'
   - '+.just4fun.site'
   - '+.just998.com'
@@ -34699,7 +34704,6 @@ payload:
   - '+.lersang.com'
   - '+.lerye.com'
   - '+.leshanvc.com'
-  - '+.leshi123.cc'
   - '+.leshiguang.com'
   - '+.leshou.com'
   - '+.leshow.com'
@@ -36802,7 +36806,6 @@ payload:
   - '+.mamahao.com'
   - '+.mamahuo.com'
   - '+.mamcharge.com'
-  - '+.mamecn.com'
   - '+.mamicode.com'
   - '+.mamilist.com'
   - '+.mamioo.com'
@@ -37549,7 +37552,6 @@ payload:
   - '+.mg-pen.com'
   - '+.mg21.com'
   - '+.mg3721.com'
-  - '+.mg67.com'
   - '+.mgc-games.com'
   - '+.mgd5.com'
   - '+.mgdzz.com'
@@ -39552,6 +39554,7 @@ payload:
   - '+.newsing.com'
   - '+.newskj.com'
   - '+.newskj.org'
+  - '+.newsletter-cn.com'
   - '+.newsmth.com'
   - '+.newsmth.net'
   - '+.newsmy-car.com'
@@ -41779,7 +41782,6 @@ payload:
   - '+.pinzhi.org'
   - '+.pinzhikeji.net'
   - '+.pinzs.com'
-  - '+.pioneerlinux.com'
   - '+.pioneersci.com'
   - '+.pipa.com'
   - '+.pipacdn.com'
@@ -42720,6 +42722,7 @@ payload:
   - '+.qhliepin.com'
   - '+.qhlingwang.com'
   - '+.qhlly.com'
+  - '+.qhlyou.com'
   - '+.qhm123.com'
   - '+.qhmed.com'
   - '+.qhmsg.com'
@@ -45062,7 +45065,6 @@ payload:
   - '+.safenext.com'
   - '+.sagetrc.com'
   - '+.sagigame.net'
-  - '+.sagocloud.com'
   - '+.sahcqmu.com'
   - '+.saibeiip.com'
   - '+.saibeinews.com'
@@ -46769,7 +46771,6 @@ payload:
   - '+.shtxcj.com'
   - '+.shu-ju.net'
   - '+.shu163.com'
-  - '+.shuabuapp.com'
   - '+.shuaibo.wang'
   - '+.shuaigeshe.com'
   - '+.shuaihuajun.com'
@@ -46971,7 +46972,6 @@ payload:
   - '+.shuzhiduo.com'
   - '+.shuzhou.cc'
   - '+.shuzibao.com'
-  - '+.shuziju.com'
   - '+.shuzixiaoyuan.com'
   - '+.shwcsh.com'
   - '+.shwdbjgs.com'
@@ -47727,7 +47727,6 @@ payload:
   - '+.snsyx.com'
   - '+.snto.com'
   - '+.snupg.com'
-  - '+.snxfcw.com'
   - '+.snxw.com'
   - '+.snyu.com'
   - '+.snzfj.net'
@@ -48391,6 +48390,7 @@ payload:
   - '+.sthforme.com'
   - '+.sthifi.com'
   - '+.sthke.com'
+  - '+.sticksgame.com'
   - '+.stjfw.net'
   - '+.stjunshi.com'
   - '+.stkey.win'
@@ -49367,7 +49367,6 @@ payload:
   - '+.t-io.org'
   - '+.t-ji.net'
   - '+.t-jiu.com'
-  - '+.t-nan.com'
   - '+.t-v.com'
   - '+.t.tt'
   - '+.t00ls.cc'
@@ -50652,7 +50651,6 @@ payload:
   - '+.tlivepush.com'
   - '+.tljcw.com'
   - '+.tljob8001.com'
-  - '+.tlkzs.com'
   - '+.tlqwine.com'
   - '+.tlrcbk.com'
   - '+.tlryjg.com'
@@ -53004,7 +53002,6 @@ payload:
   - '+.vmvps.com'
   - '+.vnet.mobi'
   - '+.vnnox.com'
-  - '+.vnsr9488.com'
   - '+.vnvshen.com'
   - '+.vnzmi.com'
   - '+.vobao.com'
@@ -53172,7 +53169,6 @@ payload:
   - '+.vulogcn.com'
   - '+.vultr1.com'
   - '+.vultrcn.com'
-  - '+.vultrla.com'
   - '+.vultrvps.com'
   - '+.vunion.net'
   - '+.vurl.link'
@@ -53389,7 +53385,6 @@ payload:
   - '+.wandafilm.com'
   - '+.wandahotelinvestment.com'
   - '+.wandahotels.com'
-  - '+.wandanqu.com'
   - '+.wandaplazas.com'
   - '+.wandarealm.com'
   - '+.wandasportstravel.com'
@@ -53891,6 +53886,7 @@ payload:
   - '+.weherepost.com'
   - '+.wei2008.com'
   - '+.wei6.com'
+  - '+.weiao.online'
   - '+.weiba66.com'
   - '+.weibaiyue.com'
   - '+.weibaji.com'
@@ -55407,7 +55403,6 @@ payload:
   - '+.wsfdn.com'
   - '+.wsfff.com'
   - '+.wsfnk.com'
-  - '+.wsfsy.com'
   - '+.wsgjp.com'
   - '+.wsglb0.com'
   - '+.wsglb0.info'
@@ -56838,6 +56833,7 @@ payload:
   - '+.xiarj.com'
   - '+.xiataoseo.com'
   - '+.xiatou.com'
+  - '+.xiaw.net'
   - '+.xiawan8.com'
   - '+.xiaxiab8.com'
   - '+.xiaxs.la'
@@ -57058,7 +57054,6 @@ payload:
   - '+.xingjijy.com'
   - '+.xingjimob.com'
   - '+.xingjuhe.com'
-  - '+.xingkeduo.com'
   - '+.xingketech.com'
   - '+.xingkeyuan.co'
   - '+.xingkong.com'
@@ -57517,6 +57512,7 @@ payload:
   - '+.xktoupiao.com'
   - '+.xkw.com'
   - '+.xkwe.com'
+  - '+.xkxiazai.com'
   - '+.xkyn.com'
   - '+.xkyn.net'
   - '+.xkzww.net'
@@ -57798,7 +57794,6 @@ payload:
   - '+.xs91.net'
   - '+.xsb120.com'
   - '+.xsbiquge.com'
-  - '+.xsbnggzyjyxx.com'
   - '+.xscbs.com'
   - '+.xschu.com'
   - '+.xsdma.com'
@@ -58193,7 +58188,6 @@ payload:
   - '+.xxhd-tech.com'
   - '+.xxhh.com'
   - '+.xxhkt.com'
-  - '+.xxhyzd.com'
   - '+.xxingclub.com'
   - '+.xxjcy.com'
   - '+.xxjrjxc.com'
@@ -59493,6 +59487,7 @@ payload:
   - '+.yivicar.com'
   - '+.yivizd.com'
   - '+.yiwaiart.com'
+  - '+.yiwan.com'
   - '+.yiwangdujin.com'
   - '+.yiwanggo.net'
   - '+.yiwangtui.com'
@@ -61887,7 +61882,6 @@ payload:
   - '+.zhantai.com'
   - '+.zhantuo.com'
   - '+.zhanxingfang.com'
-  - '+.zhanyicg.com'
   - '+.zhanyouyun.com'
   - '+.zhanzhang.net'
   - '+.zhao-meng.com'
@@ -62223,7 +62217,6 @@ payload:
   - '+.zhinengshe.com'
   - '+.zhinengxia.com'
   - '+.zhinet.com'
-  - '+.zhinews.com'
   - '+.zhinikefu.com'
   - '+.zhiniu8.com'
   - '+.zhipan.net'
@@ -62701,7 +62694,6 @@ payload:
   - '+.zhuzhai.com'
   - '+.zhuzher.com'
   - '+.zhuzhichao.com'
-  - '+.zhuzhiji123.com'
   - '+.zhuzhouwang.com'
   - '+.zhuzi.me'
   - '+.zhuzihaoke.com'
@@ -63744,6 +63736,7 @@ payload:
   - '+.zxzhijia.com'
   - '+.zxzj.me'
   - '+.zxzlf.com'
+  - '+.zxzmail.com'
   - '+.zxzt123.com'
   - '+.zxzyl.com'
   - '+.zxzyy.com'
