--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3473,7 +3473,6 @@ payload:
   - '+.4sscrm.com'
   - '+.4thetooth.com'
   - '+.4u4v.net'
-  - '+.4w2b.cc'
   - '+.4w8.net'
   - '+.4xiazai.com'
   - '+.4xseo.com'
@@ -7155,6 +7154,7 @@ payload:
   - '+.acconsys.com'
   - '+.accopower.com'
   - '+.account.cdnetworks.com'
+  - '+.account.htcvive.com'
   - '+.account.samsung.com'
   - '+.accsh.org'
   - '+.accu.cc'
@@ -7656,6 +7656,7 @@ payload:
   - '+.aifcdn.com'
   - '+.aifei8.net'
   - '+.aifengjie.com'
+  - '+.aifenlei.com'
   - '+.aifont.com'
   - '+.aifu10.com'
   - '+.aifu360.com'
@@ -7710,7 +7711,6 @@ payload:
   - '+.aikexi.com'
   - '+.aikf.com'
   - '+.aikucun.com'
-  - '+.ailaba.org'
   - '+.ailbaba.me'
   - '+.ailete.com'
   - '+.ailewan.com'
@@ -8722,6 +8722,7 @@ payload:
   - '+.appcpa.net'
   - '+.appcpx.com'
   - '+.appcup.com'
+  - '+.appcute.im'
   - '+.appdao.com'
   - '+.appdown.info'
   - '+.appdp.com'
@@ -10580,6 +10581,7 @@ payload:
   - '+.billwang.net'
   - '+.bilnn.com'
   - '+.bim-times.com'
+  - '+.bimfmchina.com'
   - '+.bimilou.com'
   - '+.bimo.cc'
   - '+.binaryai.net'
@@ -10709,6 +10711,7 @@ payload:
   - '+.birdback.org'
   - '+.birdol.com'
   - '+.birdpush.com'
+  - '+.birdwork.com'
   - '+.birentech.com'
   - '+.bisairi.com'
   - '+.bisenet.com'
@@ -10891,6 +10894,7 @@ payload:
   - '+.bjhee.com'
   - '+.bjhengjia.net'
   - '+.bjhj10000.com'
+  - '+.bjhmcm.com'
   - '+.bjhmxx.net'
   - '+.bjhouse.com'
   - '+.bjhrkc.com'
@@ -11136,6 +11140,8 @@ payload:
   - '+.blockob.com'
   - '+.blocrepresents.com'
   - '+.blog.htc.com'
+  - '+.blog.htcvive.com'
+  - '+.blog.vive.com'
   - '+.blog007.com'
   - '+.blog120.com'
   - '+.blog1984.com'
@@ -12289,6 +12295,7 @@ payload:
   - '+.casarte.com'
   - '+.casboc.com'
   - '+.casctcp.com'
+  - '+.casdoor.org'
   - '+.case91.com'
   - '+.casece.org'
   - '+.cashtoutiao.com'
@@ -13251,6 +13258,7 @@ payload:
   - '+.chaosw.com'
   - '+.chaov.com'
   - '+.chaowanjoy.com'
+  - '+.chaoxibiao.net'
   - '+.chaoxin.com'
   - '+.chaoxing.com'
   - '+.chaoyi996.com'
@@ -13451,6 +13459,7 @@ payload:
   - '+.chenyea.com'
   - '+.chenyistyle.com'
   - '+.chenyongjun.vip'
+  - '+.chenyou123.com'
   - '+.chenyuan588.com'
   - '+.chenyuanjian.com'
   - '+.chenyudong.com'
@@ -14549,6 +14558,7 @@ payload:
   - '+.cicconline.com'
   - '+.ciccphoto.com'
   - '+.ciccwargame.com'
+  - '+.ciccwm.com'
   - '+.ciceme.com'
   - '+.cicet.net'
   - '+.ciciec.com'
@@ -14734,6 +14744,7 @@ payload:
   - '+.cjrcsc.com'
   - '+.cjs-lwh.love'
   - '+.cjsc.com'
+  - '+.cjsgegs.com'
   - '+.cjting.me'
   - '+.cjveg.com'
   - '+.cjxz.com'
@@ -15805,6 +15816,7 @@ payload:
   - '+.console.cdnetworks.com'
   - '+.contentchina.com'
   - '+.contentchina.net'
+  - '+.contentstore.htcvive.com'
   - '+.contiez.com'
   - '+.controlinai.com'
   - '+.conuo.com'
@@ -16005,6 +16017,7 @@ payload:
   - '+.cqae.com'
   - '+.cqaso.com'
   - '+.cqbdfeng.com'
+  - '+.cqbdksm.com'
   - '+.cqbm2007.com'
   - '+.cqbnedu.com'
   - '+.cqbnrc.com'
@@ -16422,6 +16435,7 @@ payload:
   - '+.ctdns.net'
   - '+.ctdsb.com'
   - '+.ctdsb.net'
+  - '+.ctdzsk.com'
   - '+.cteaw.com'
   - '+.ctecdcs.com'
   - '+.ctex.org'
@@ -16535,6 +16549,7 @@ payload:
   - '+.cunfang.com'
   - '+.cunnar.com'
   - '+.cunyoulu.com'
+  - '+.cunzhen.vip'
   - '+.cunzj.com'
   - '+.cuobiezi.net'
   - '+.cuour-edu.com'
@@ -17658,7 +17673,9 @@ payload:
   - '+.devclub.cc'
   - '+.develenv.com'
   - '+.developer.dji.com'
+  - '+.developer.htcvive.com'
   - '+.developer.microsoft.com'
+  - '+.developer.vive.com'
   - '+.devemi.com'
   - '+.devework.com'
   - '+.devexel-tech.com'
@@ -18633,6 +18650,7 @@ payload:
   - '+.doorhr.com'
   - '+.doorzo.app'
   - '+.doorzo.net'
+  - '+.doov5g.com'
   - '+.doowinfintec.com'
   - '+.dopa.com'
   - '+.dopic.net'
@@ -20151,6 +20169,7 @@ payload:
   - '+.embsky.com'
   - '+.emcbj.com'
   - '+.emcsosin.com'
+  - '+.emdl.ws.microsoft.com'
   - '+.emea.cdnetworks.com'
   - '+.emeixs.com'
   - '+.emeor.com'
@@ -21569,6 +21588,7 @@ payload:
   - '+.finetopix.com'
   - '+.fineui.com'
   - '+.fineway.com'
+  - '+.finewyx.com'
   - '+.finger66.com'
   - '+.fingerstylechina.com'
   - '+.fingertc.com'
@@ -22283,6 +22303,7 @@ payload:
   - '+.fuzegame.com'
   - '+.fuzfu.net'
   - '+.fuzhimao.com'
+  - '+.fuzhuangwang.com'
   - '+.fuzhugo.com'
   - '+.fview.com'
   - '+.fvti.com'
@@ -23026,6 +23047,7 @@ payload:
   - '+.geruihuate.com'
   - '+.gesanghua.org'
   - '+.gesep.com'
+  - '+.geshitong.net'
   - '+.geshui.com'
   - '+.geshui100.com'
   - '+.geshui99.com'
@@ -23852,6 +23874,7 @@ payload:
   - '+.gs99gs.com'
   - '+.gsadds.com'
   - '+.gsafc.com'
+  - '+.gsafety.com'
   - '+.gsbankchina.com'
   - '+.gsbankmall.com'
   - '+.gscidc.net'
@@ -25696,6 +25719,7 @@ payload:
   - '+.heiguang.com'
   - '+.heiguang.net'
   - '+.heijiao.net'
+  - '+.heijiaovip.com'
   - '+.heijin.org'
   - '+.heijingjihua.com'
   - '+.heilanhome.com'
@@ -28419,6 +28443,7 @@ payload:
   - '+.icixun.com'
   - '+.iciyuan.com'
   - '+.icjiemi.com'
+  - '+.icjs.ink'
   - '+.ickeep.com'
   - '+.icketang.com'
   - '+.ickey.cc'
@@ -30919,6 +30944,7 @@ payload:
   - '+.jielibj.com'
   - '+.jieligo.net'
   - '+.jielong-printing.com'
+  - '+.jielong.co'
   - '+.jielongguanjia.com'
   - '+.jiemeng.tw'
   - '+.jiemeng8.com'
@@ -30943,6 +30969,7 @@ payload:
   - '+.jiexi.la'
   - '+.jiexilaiba.com'
   - '+.jiexiyouxuan.com'
+  - '+.jiexunyun.net'
   - '+.jieyang.la'
   - '+.jieyou.com'
   - '+.jieyougame.com'
@@ -31232,6 +31259,7 @@ payload:
   - '+.jinshanju.com'
   - '+.jinshare.com'
   - '+.jinshisoft.com'
+  - '+.jinshuivip.com'
   - '+.jinshuju.co'
   - '+.jinshuju.com'
   - '+.jinshuju.net'
@@ -31384,6 +31412,7 @@ payload:
   - '+.jiumei.com'
   - '+.jiumei8.com'
   - '+.jiunile.com'
+  - '+.jiuniok.com'
   - '+.jiupaicn.com'
   - '+.jiupaicom.com'
   - '+.jiuq.com'
@@ -31607,6 +31636,7 @@ payload:
   - '+.jlsemi.com'
   - '+.jlsjsxxw.com'
   - '+.jlspr.com'
+  - '+.jltchina.com'
   - '+.jltyjxzz.com'
   - '+.jlwlyx.com'
   - '+.jlwubi.com'
@@ -33803,6 +33833,7 @@ payload:
   - '+.kuboluo.com'
   - '+.kuche.com'
   - '+.kuchuan.com'
+  - '+.kucunguanli.online'
   - '+.kudianqi.com'
   - '+.kudianvip.com'
   - '+.kudiaoyu.com'
@@ -36239,6 +36270,7 @@ payload:
   - '+.lufaxcdn.com'
   - '+.luffycity.com'
   - '+.lufunds.com'
+  - '+.lugangsoft.com'
   - '+.lugir.com'
   - '+.luhao198.com'
   - '+.luhehospital.com'
@@ -39307,6 +39339,7 @@ payload:
   - '+.nanrenwa.com'
   - '+.nanshanski.com'
   - '+.nantaihu.com'
+  - '+.nantong-hst.com'
   - '+.nantonghua.net'
   - '+.nanxueqx.com'
   - '+.nanxunjob.com'
@@ -40399,6 +40432,7 @@ payload:
   - '+.ocd120.com'
   - '+.oceanbase.com'
   - '+.oceanbot-steam.com'
+  - '+.oceandatas.com'
   - '+.oceanengine.com'
   - '+.oceanlau.com'
   - '+.oceanol.com'
@@ -42267,6 +42301,7 @@ payload:
   - '+.pptok.com'
   - '+.pptschool.com'
   - '+.pptstore.net'
+  - '+.pptsupermarket.com'
   - '+.pptutor.com'
   - '+.pptv.com'
   - '+.pptvyun.com'
@@ -42752,6 +42787,7 @@ payload:
   - '+.qfamilylaw.com'
   - '+.qfang.com'
   - '+.qfangimg.com'
+  - '+.qfcm.vip'
   - '+.qfedu.com'
   - '+.qfeiche.com'
   - '+.qfgolang.com'
@@ -43184,6 +43220,7 @@ payload:
   - '+.qingkan.tw'
   - '+.qingkeji.com'
   - '+.qingkuaipdf.com'
+  - '+.qingkuw.com'
   - '+.qinglanji.com'
   - '+.qingliange.com'
   - '+.qingliangkeji.com'
@@ -44931,6 +44968,7 @@ payload:
   - '+.ruaimi.com'
   - '+.ruan8.com'
   - '+.ruancan.com'
+  - '+.ruanduo.com'
   - '+.ruandy.com'
   - '+.ruanfujia.com'
   - '+.ruanjiandown.com'
@@ -45813,6 +45851,7 @@ payload:
   - '+.seinfeldtv.com'
   - '+.seisman.info'
   - '+.sejai.com'
+  - '+.sejianghu.com'
   - '+.sekede.net'
   - '+.sekorm.com'
   - '+.selboo.com'
@@ -46893,6 +46932,7 @@ payload:
   - '+.shuame.com'
   - '+.shuanghui.net'
   - '+.shuangkuai.co'
+  - '+.shuangmatbs.com'
   - '+.shuangmei2008.com'
   - '+.shuangtao.com'
   - '+.shuangxian.com'
@@ -47689,6 +47729,7 @@ payload:
   - '+.smartoct.com'
   - '+.smartont.net'
   - '+.smartpigai.com'
+  - '+.smartpoweriot.com'
   - '+.smartproxy.me'
   - '+.smartqian.com'
   - '+.smartsenstech.com'
@@ -48122,6 +48163,7 @@ payload:
   - '+.souqiu8.com'
   - '+.souqiwang.net'
   - '+.souqupu.com'
+  - '+.source.tutorabc.com'
   - '+.source3g.com'
   - '+.sourcecodecap.com'
   - '+.sourcecvs.com'
@@ -49871,6 +49913,7 @@ payload:
   - '+.tboxn.com'
   - '+.tbq168.com'
   - '+.tbqw.com'
+  - '+.tbs321.com'
   - '+.tbsandbox.com'
   - '+.tbscp.net'
   - '+.tbsgame.net'
@@ -51371,6 +51414,7 @@ payload:
   - '+.tt116114.com'
   - '+.tt1386.com'
   - '+.tt286.com'
+  - '+.tt65org.com'
   - '+.tt96596.com'
   - '+.ttaidu.com'
   - '+.ttbba.com'
@@ -54066,6 +54110,7 @@ payload:
   - '+.weihubao.com'
   - '+.weihuijob.com'
   - '+.weihulian.com'
+  - '+.weihuo.site'
   - '+.weihz.net'
   - '+.weijifan.com'
   - '+.weijinsuo.com'
@@ -55856,7 +55901,9 @@ payload:
   - '+.www.samsung.com'
   - '+.www.st.com'
   - '+.www.thinkpad.com'
+  - '+.www.tutorabc.com'
   - '+.www.tzoo-img.com'
+  - '+.www.vive.com'
   - '+.www.viveport.com'
   - '+.www.volvocars.com'
   - '+.www1.djicdn.com'
@@ -56119,6 +56166,7 @@ payload:
   - '+.xajjwy.com'
   - '+.xajob.com'
   - '+.xajr.com'
+  - '+.xajxcw.com'
   - '+.xalanq.com'
   - '+.xalawyer.net'
   - '+.xalhar.net'
@@ -57490,6 +57538,7 @@ payload:
   - '+.xiunian.wang'
   - '+.xiuno.com'
   - '+.xiupin.com'
+  - '+.xiuqicloud.com'
   - '+.xiuren.com'
   - '+.xiushao.com'
   - '+.xiusheji.com'
@@ -57976,6 +58025,7 @@ payload:
   - '+.xsyk021.com'
   - '+.xsyqmztg.com'
   - '+.xsyushan.com'
+  - '+.xsyx.xyz'
   - '+.xsyxsc.com'
   - '+.xszp.cc'
   - '+.xszrcw.com'
@@ -58274,6 +58324,7 @@ payload:
   - '+.xwbank.com'
   - '+.xwcms.net'
   - '+.xwcool.com'
+  - '+.xwcxgroup.com'
   - '+.xwdsp.com'
   - '+.xweb.vip'
   - '+.xwei.tv'
@@ -58593,6 +58644,7 @@ payload:
   - '+.yanboyuan.com'
   - '+.yanchebang.com'
   - '+.yanchengzx.com'
+  - '+.yanchupiaowu.com'
   - '+.yandianying.com'
   - '+.yandui.com'
   - '+.yanedu.com'
@@ -60187,6 +60239,7 @@ payload:
   - '+.youoh.com'
   - '+.youonbike.com'
   - '+.youook.com'
+  - '+.youpengw.com'
   - '+.youpin898.com'
   - '+.youpinhaoche.com'
   - '+.youpinppt.com'
@@ -60731,6 +60784,7 @@ payload:
   - '+.yufu365.com'
   - '+.yufuid.com'
   - '+.yugasun.com'
+  - '+.yugew.com'
   - '+.yuguo.us'
   - '+.yugusoft.com'
   - '+.yuheii.com'
@@ -61391,6 +61445,7 @@ payload:
   - '+.z0ukun.com'
   - '+.z1233.com'
   - '+.z12345.com'
+  - '+.z17.link'
   - '+.z2sci.com'
   - '+.z316.com'
   - '+.z3quant.com'
@@ -61750,6 +61805,7 @@ payload:
   - '+.zgcmlm.com'
   - '+.zgcsa.org'
   - '+.zgcswhcbw.com'
+  - '+.zgcszkw.com'
   - '+.zgcups.com'
   - '+.zgddek.com'
   - '+.zgddmx.com'
@@ -61946,6 +62002,7 @@ payload:
   - '+.zhanggaoyuan.com'
   - '+.zhangge.net'
   - '+.zhanggee.com'
+  - '+.zhanghonghong.com'
   - '+.zhanghongliang.com'
   - '+.zhanghuanglong.com'
   - '+.zhangjinkun.com'
