--- a/directbak.yaml
+++ b/directbak.yaml
@@ -8880,7 +8880,6 @@ payload:
   - '+.armsword.com'
   - '+.armystar.com'
   - '+.armzl.com'
-  - '+.arnaz-on-co-jp.icu'
   - '+.arocmag.com'
   - '+.arongsoft.com'
   - '+.arp.cc'
@@ -9630,6 +9629,7 @@ payload:
   - '+.banbaowang.com'
   - '+.banciyuan.me'
   - '+.bandaoapp.com'
+  - '+.bandayun.com'
   - '+.bandcevent.com'
   - '+.bandenghui.com'
   - '+.bandengw.com'
@@ -12823,7 +12823,6 @@ payload:
   - '+.cdzixun.net'
   - '+.cdzjryb.com'
   - '+.cdzmn.com'
-  - '+.cdzspcls.com'
   - '+.cdzszp.com'
   - '+.cdzvan.com'
   - '+.ce-air.com'
@@ -12968,7 +12967,6 @@ payload:
   - '+.ceunion.com'
   - '+.ceve-market.org'
   - '+.cevsn.com'
-  - '+.ceye.io'
   - '+.cf-china.info'
   - '+.cf-ns.com'
   - '+.cf-ns.net'
@@ -13373,7 +13371,6 @@ payload:
   - '+.chemsrc.com'
   - '+.chemyq.com'
   - '+.chen-nuo.com'
-  - '+.chen7782.com'
   - '+.chenag.com'
   - '+.chenall.net'
   - '+.chenapp.com'
@@ -14708,7 +14705,6 @@ payload:
   - '+.cizip.com'
   - '+.cj-elec.com'
   - '+.cjavapy.com'
-  - '+.cjcp.org'
   - '+.cjdcw.com'
   - '+.cjdropshipping.com'
   - '+.cjdx1.com'
@@ -17096,6 +17092,7 @@ payload:
   - '+.danji8.com'
   - '+.danji9.com'
   - '+.danjiali.com'
+  - '+.danjuan.com'
   - '+.danjuanapp.com'
   - '+.danjuanfunds.com'
   - '+.danke.com'
@@ -18735,6 +18732,7 @@ payload:
   - '+.douquyyds.com'
   - '+.doushen.com'
   - '+.doutian.me'
+  - '+.doutub.com'
   - '+.doutukeji.com'
   - '+.doutushe.com'
   - '+.douwanweb.com'
@@ -19550,6 +19548,7 @@ payload:
   - '+.eastwinn.com'
   - '+.easy-all.net'
   - '+.easy-china.com'
+  - '+.easy-h5.com'
   - '+.easy-linkholiday.com'
   - '+.easy-mock.com'
   - '+.easy2world.com'
@@ -20680,6 +20679,7 @@ payload:
   - '+.expai.com'
   - '+.expba.com'
   - '+.expdns.net'
+  - '+.expin.site'
   - '+.expingworld.com'
   - '+.expiredns.net'
   - '+.expirenotification.com'
@@ -22991,7 +22991,6 @@ payload:
   - '+.geimian.com'
   - '+.geindex.com'
   - '+.geiniwan.com'
-  - '+.geishost.com'
   - '+.geisnic.com'
   - '+.geizan.cc'
   - '+.gejiba.com'
@@ -28611,6 +28610,7 @@ payload:
   - '+.idianfa.com'
   - '+.idianshijia.com'
   - '+.idigi.net'
+  - '+.idlegog.com'
   - '+.idmchina.net'
   - '+.idmzj.com'
   - '+.idn100.com'
@@ -29525,6 +29525,7 @@ payload:
   - '+.iotpai.com'
   - '+.iotwrt.com'
   - '+.iotxing.com'
+  - '+.iouluo.com'
   - '+.iovweek.com'
   - '+.iowiki.com'
   - '+.ip-guard.net'
@@ -30783,6 +30784,7 @@ payload:
   - '+.jianmu.run'
   - '+.jianniang.com'
   - '+.jianpaimeiye.com'
+  - '+.jianpian.info'
   - '+.jianpu8.com'
   - '+.jianpu99.net'
   - '+.jianq.com'
@@ -33363,6 +33365,7 @@ payload:
   - '+.kkvv77.com'
   - '+.kkx.net'
   - '+.kkyoo.com'
+  - '+.kkyp.shop'
   - '+.kkyuedu.com'
   - '+.kkzj.com'
   - '+.kl1l5.com'
@@ -34996,6 +34999,7 @@ payload:
   - '+.liangjan.com'
   - '+.liangjianghu.com'
   - '+.liangjihui.com'
+  - '+.liangjiu.shop'
   - '+.liangka.vip'
   - '+.liangkun.net'
   - '+.liangle.com'
@@ -35104,6 +35108,7 @@ payload:
   - '+.lichengwu.net'
   - '+.lichenjy.com'
   - '+.lichensafe.com'
+  - '+.lickeji.com'
   - '+.licomsh.com'
   - '+.licqi.com'
   - '+.licstar.net'
@@ -35611,6 +35616,7 @@ payload:
   - '+.liveinau.com'
   - '+.liveincy.com'
   - '+.livejournal.com'
+  - '+.livejournal.net'
   - '+.liveme.com'
   - '+.livemediav.com'
   - '+.livemook.com'
@@ -35835,7 +35841,6 @@ payload:
   - '+.loftshine.com'
   - '+.logacg.com'
   - '+.logclub.com'
-  - '+.logdu.com'
   - '+.loghao.com'
   - '+.logi-inno.com'
   - '+.logi.im'
@@ -36779,7 +36784,6 @@ payload:
   - '+.mai.com'
   - '+.maianhao.com'
   - '+.maibw.net'
-  - '+.maicha365.com'
   - '+.maichawang.com'
   - '+.maiche.com'
   - '+.maiche168.com'
@@ -39926,6 +39930,7 @@ payload:
   - '+.niwodai.net'
   - '+.niwota.com'
   - '+.niwoxuexi.com'
+  - '+.nixi.win'
   - '+.nixiba.com'
   - '+.nixwang.com'
   - '+.nizhan888.com'
@@ -40142,6 +40147,7 @@ payload:
   - '+.novastargame.net'
   - '+.novel-supertv.com'
   - '+.noveless.com'
+  - '+.novelfmvod.com'
   - '+.novell.me'
   - '+.novemideas.com'
   - '+.novtium.com'
@@ -42317,6 +42323,7 @@ payload:
   - '+.ppxs.net'
   - '+.ppxvod.com'
   - '+.ppxwo.com'
+  - '+.ppxzy.org'
   - '+.ppys.net'
   - '+.ppzhan.com'
   - '+.ppzhilian.com'
@@ -44949,6 +44956,7 @@ payload:
   - '+.rt-thread.io'
   - '+.rt-thread.org'
   - '+.rtahengtai.com'
+  - '+.rtalink.com'
   - '+.rtb5.com'
   - '+.rtbasia.com'
   - '+.rtcdeveloper.com'
@@ -48027,6 +48035,7 @@ payload:
   - '+.songhaoyun.com'
   - '+.songhaozhi.com'
   - '+.songhengnet.com'
+  - '+.songhuwan.com'
   - '+.songker.com'
   - '+.songlei.net'
   - '+.songliguo.com'
@@ -52420,7 +52429,6 @@ payload:
   - '+.uomg.com'
   - '+.uono4521.com'
   - '+.uooconline.com'
-  - '+.uoocool.com'
   - '+.uooioo.com'
   - '+.uoolu.com'
   - '+.uooss.com'
@@ -54625,7 +54633,6 @@ payload:
   - '+.whegj.com'
   - '+.whenchat.net'
   - '+.whenever-online.com'
-  - '+.wheresciencemeetsspirit.com'
   - '+.wherxian.com'
   - '+.whetc.com'
   - '+.whevt.com'
@@ -60724,7 +60731,6 @@ payload:
   - '+.yuego.net'
   - '+.yuegowu.com'
   - '+.yuehuan.com'
-  - '+.yuehuzhi.com'
   - '+.yueimg.com'
   - '+.yueji.com'
   - '+.yuejianzun.xyz'
@@ -62629,6 +62635,7 @@ payload:
   - '+.zhongtuobang.com'
   - '+.zhongwei-info.com'
   - '+.zhongweijy.com'
+  - '+.zhongwen.wiki'
   - '+.zhongwenhexinqikan.com'
   - '+.zhongwucan.com'
   - '+.zhongxiangdichan.net'
