--- a/anti-ad-clash.yaml
+++ b/anti-ad-clash.yaml
@@ -1,8 +1,8 @@
 payload:
   - DOMAIN-SUFFIX,#TITLE=anti-AD
-  - DOMAIN-SUFFIX,#VER=20230429023306
+  - DOMAIN-SUFFIX,#VER=20230430004414
   - DOMAIN-SUFFIX,#URL=https://github.com/privacy-protection-tools/anti-AD
-  - DOMAIN-SUFFIX,#TOTAL_LINES=71862
+  - DOMAIN-SUFFIX,#TOTAL_LINES=71874
   - DOMAIN-SUFFIX,000dn.com
   - DOMAIN-SUFFIX,kwcdn.000dn.com
   - DOMAIN-SUFFIX,kwcscdn.000dn.com
@@ -479,6 +479,7 @@ payload:
   - DOMAIN-SUFFIX,pg-ad-b2.ws.126.net
   - DOMAIN-SUFFIX,pimg1.126.net
   - DOMAIN-SUFFIX,webstat.ws.126.net
+  - DOMAIN-SUFFIX,ads.music.126.net
   - DOMAIN-SUFFIX,iadmat.nosdn.127.net
   - DOMAIN-SUFFIX,pg-ad-b1.nosdn.127.net
   - DOMAIN-SUFFIX,yt-adp.nosdn.127.net
@@ -8877,6 +8878,7 @@ payload:
   - DOMAIN-SUFFIX,1xejnhs1zd1.staging.aporia.com
   - DOMAIN-SUFFIX,cqz6fn6aox.aporia.com
   - DOMAIN-SUFFIX,devtest.app-birdy.com
+  - DOMAIN-SUFFIX,app-measurement-cn.com
   - DOMAIN-SUFFIX,app-measurement.com
   - DOMAIN-SUFFIX,prism.app-us1.com
   - DOMAIN-SUFFIX,sp.app.com
@@ -11720,7 +11722,7 @@ payload:
   - DOMAIN-SUFFIX,vv84.bj.bcebos.com
   - DOMAIN-SUFFIX,wenku-cms.bj.bcebos.com
   - DOMAIN-SUFFIX,xsapp.cdn.bcebos.com
-  - DOMAIN-SUFFIX,staticsns.cdn.bcebos.com
+  - DOMAIN-SUFFIX,mobads-pre-config.cdn.bcebos.com
   - DOMAIN-SUFFIX,httpdns.bcelive.com
   - DOMAIN-SUFFIX,bcenuvkijj.com
   - DOMAIN-SUFFIX,bcf8fbea24.com
@@ -17451,6 +17453,7 @@ payload:
   - DOMAIN-SUFFIX,cm-trk3.com
   - DOMAIN-SUFFIX,cm-trk5.com
   - DOMAIN-SUFFIX,campaigns.cm.be
+  - DOMAIN-SUFFIX,mbads.paas.cmbchina.com
   - DOMAIN-SUFFIX,cmbestsrv.com
   - DOMAIN-SUFFIX,cmblom.cn
   - DOMAIN-SUFFIX,cmbpdk.cn
@@ -20169,6 +20172,7 @@ payload:
   - DOMAIN-SUFFIX,info.dartcontrols.com
   - DOMAIN-SUFFIX,dartg665moetyor.com
   - DOMAIN-SUFFIX,dartonim.com
+  - DOMAIN-SUFFIX,dartsearch-cn.net
   - DOMAIN-SUFFIX,ch0p.darty.com
   - DOMAIN-SUFFIX,mczpco.darty.com
   - DOMAIN-SUFFIX,darvorn.com
@@ -28220,6 +28224,7 @@ payload:
   - DOMAIN-SUFFIX,ggmm777.com
   - DOMAIN-SUFFIX,e.ggouh.com
   - DOMAIN-SUFFIX,m.ggouh.com
+  - DOMAIN-SUFFIX,ggpht.cn
   - DOMAIN-SUFFIX,ggqnre.xyz
   - DOMAIN-SUFFIX,ggrhsx.cn
   - DOMAIN-SUFFIX,nochange.ggsafe.com
@@ -28871,6 +28876,7 @@ payload:
   - DOMAIN-SUFFIX,sdn.gongkao.hn.cn
   - DOMAIN-SUFFIX,gongwuyuan.name
   - DOMAIN-SUFFIX,gongxifc.com
+  - DOMAIN-SUFFIX,gongyichuangyi.net
   - DOMAIN-SUFFIX,m.gongzhilian.com.cn
   - DOMAIN-SUFFIX,goniforas.com
   - DOMAIN-SUFFIX,gonpc.com
@@ -28946,11 +28952,16 @@ payload:
   - DOMAIN-SUFFIX,myscoop-tracking.googlecode.com
   - DOMAIN-SUFFIX,trakksocial.googlecode.com
   - DOMAIN-SUFFIX,googlecommerce.com
+  - DOMAIN-SUFFIX,googleflights-cn.net
+  - DOMAIN-SUFFIX,googleminiapps.cn
   - DOMAIN-SUFFIX,googleoptimize-cn.com
   - DOMAIN-SUFFIX,googleoptimize.com
   - DOMAIN-SUFFIX,badad.googleplex.com
   - DOMAIN-SUFFIX,googlerank.info
+  - DOMAIN-SUFFIX,googlers-cn.com
+  - DOMAIN-SUFFIX,googlesandbox-cn.com
   - DOMAIN-SUFFIX,lzzht.googlespider1.cn
+  - DOMAIN-SUFFIX,googlesyndication-cn.com
   - DOMAIN-SUFFIX,buttons.googlesyndication.com
   - DOMAIN-SUFFIX,googlesyndication.com
   - DOMAIN-SUFFIX,pagead2.googlesyndication.com
@@ -28961,6 +28972,7 @@ payload:
   - DOMAIN-SUFFIX,googletagmanager-cn.com
   - DOMAIN-SUFFIX,googletagmanager.com
   - DOMAIN-SUFFIX,www.googletagmanager.com
+  - DOMAIN-SUFFIX,googletagservices-cn.com
   - DOMAIN-SUFFIX,googletagservices.com
   - DOMAIN-SUFFIX,www.googletagservices.com
   - DOMAIN-SUFFIX,googlevads-cn.com
@@ -29739,6 +29751,7 @@ payload:
   - DOMAIN-SUFFIX,gvisit.com
   - DOMAIN-SUFFIX,gvmojhugkiud.com
   - DOMAIN-SUFFIX,gvqrclx.cn
+  - DOMAIN-SUFFIX,gvt1-cn.com
   - DOMAIN-SUFFIX,gg.gw032.com
   - DOMAIN-SUFFIX,gwaaz.cn
   - DOMAIN-SUFFIX,gwallet.com
@@ -30829,7 +30842,6 @@ payload:
   - DOMAIN-SUFFIX,stats.heyoya.com
   - DOMAIN-SUFFIX,heystaks.com
   - DOMAIN-SUFFIX,adsfs-sdkconfig.heytapimage.com
-  - DOMAIN-SUFFIX,heytapimage.com
   - DOMAIN-SUFFIX,adx.ads.heytapmobi.com
   - DOMAIN-SUFFIX,b1-data.ads.heytapmobi.com
   - DOMAIN-SUFFIX,b2-data.ads.heytapmobi.com
@@ -37988,7 +38000,6 @@ payload:
   - DOMAIN-SUFFIX,ldisgmftfxanwb.com
   - DOMAIN-SUFFIX,pv.ldlwdsx.com
   - DOMAIN-SUFFIX,www.ldlwdsx.com
-  - DOMAIN-SUFFIX,ldmnq.com
   - DOMAIN-SUFFIX,sp.ldnews.com
   - DOMAIN-SUFFIX,ldnlyap.com
   - DOMAIN-SUFFIX,ldpiecesonth.xyz
@@ -68530,6 +68541,7 @@ payload:
   - DOMAIN-SUFFIX,xhmybanjia.cn
   - DOMAIN-SUFFIX,xhqg.xyz
   - DOMAIN-SUFFIX,xhr0.xyz
+  - DOMAIN-SUFFIX,ads-img-al.xhscdn.com
   - DOMAIN-SUFFIX,xhsrw.xyz
   - DOMAIN-SUFFIX,c.xhsxgmt.cn
   - DOMAIN-SUFFIX,s.xhsxgmt.cn
