--- a/anti-ad-clash.yaml
+++ b/anti-ad-clash.yaml
@@ -1,8 +1,8 @@
 payload:
   - DOMAIN-SUFFIX,#TITLE=anti-AD
-  - DOMAIN-SUFFIX,#VER=20230430004414
+  - DOMAIN-SUFFIX,#VER=20230430234621
   - DOMAIN-SUFFIX,#URL=https://github.com/privacy-protection-tools/anti-AD
-  - DOMAIN-SUFFIX,#TOTAL_LINES=71874
+  - DOMAIN-SUFFIX,#TOTAL_LINES=71875
   - DOMAIN-SUFFIX,000dn.com
   - DOMAIN-SUFFIX,kwcdn.000dn.com
   - DOMAIN-SUFFIX,kwcscdn.000dn.com
@@ -30842,6 +30842,7 @@ payload:
   - DOMAIN-SUFFIX,stats.heyoya.com
   - DOMAIN-SUFFIX,heystaks.com
   - DOMAIN-SUFFIX,adsfs-sdkconfig.heytapimage.com
+  - DOMAIN-SUFFIX,img-c.heytapimage.com
   - DOMAIN-SUFFIX,adx.ads.heytapmobi.com
   - DOMAIN-SUFFIX,b1-data.ads.heytapmobi.com
   - DOMAIN-SUFFIX,b2-data.ads.heytapmobi.com
