--- a/anti-ad-clash.yaml
+++ b/anti-ad-clash.yaml
@@ -1,8 +1,8 @@
 payload:
   - DOMAIN-SUFFIX,#TITLE=anti-AD
-  - DOMAIN-SUFFIX,#VER=20230520023306
+  - DOMAIN-SUFFIX,#VER=20230521181438
   - DOMAIN-SUFFIX,#URL=https://github.com/privacy-protection-tools/anti-AD
-  - DOMAIN-SUFFIX,#TOTAL_LINES=72333
+  - DOMAIN-SUFFIX,#TOTAL_LINES=72340
   - DOMAIN-SUFFIX,000dn.com
   - DOMAIN-SUFFIX,kwcdn.000dn.com
   - DOMAIN-SUFFIX,kwcscdn.000dn.com
@@ -10647,6 +10647,7 @@ payload:
   - DOMAIN-SUFFIX,revboostprocdnadsprod.azureedge.net
   - DOMAIN-SUFFIX,sdtagging.azureedge.net
   - DOMAIN-SUFFIX,wheelioapp.azureedge.net
+  - DOMAIN-SUFFIX,advertiseonbing.azureedge.net
   - DOMAIN-SUFFIX,sd-tagging.azurefd.net
   - DOMAIN-SUFFIX,latest.azureultra.com
   - DOMAIN-SUFFIX,adrackpush.azurewebsites.net
@@ -22728,6 +22729,7 @@ payload:
   - DOMAIN-SUFFIX,share.dunzo.in
   - DOMAIN-SUFFIX,m.duobao999.com
   - DOMAIN-SUFFIX,www.duobaoqj.com
+  - DOMAIN-SUFFIX,ad.duoduo.link
   - DOMAIN-SUFFIX,duoduo.net
   - DOMAIN-SUFFIX,picture.duokan.com
   - DOMAIN-SUFFIX,v2.fm.n.duokanbox.com
@@ -29119,6 +29121,8 @@ payload:
   - DOMAIN-SUFFIX,google-analytics.com
   - DOMAIN-SUFFIX,ssl.google-analytics.com
   - DOMAIN-SUFFIX,www.google-analytics.com
+  - DOMAIN-SUFFIX,ads.google.cn
+  - DOMAIN-SUFFIX,adsense.google.cn
   - DOMAIN-SUFFIX,adservice.google.co.jp
   - DOMAIN-SUFFIX,analytics.google.com
   - DOMAIN-SUFFIX,fcmatch.google.com
@@ -69026,6 +69030,9 @@ payload:
   - DOMAIN-SUFFIX,xhqg.xyz
   - DOMAIN-SUFFIX,xhr0.xyz
   - DOMAIN-SUFFIX,ads-img-al.xhscdn.com
+  - DOMAIN-SUFFIX,ads-img-qc.xhscdn.com
+  - DOMAIN-SUFFIX,ads-video-al.xhscdn.com
+  - DOMAIN-SUFFIX,ads-video-qc.xhscdn.com
   - DOMAIN-SUFFIX,xhsrw.xyz
   - DOMAIN-SUFFIX,c.xhsxgmt.cn
   - DOMAIN-SUFFIX,s.xhsxgmt.cn
