--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2142,7 +2142,6 @@ payload:
   - '+.23sk.com'
   - '+.23tgo.com'
   - '+.23txt.com'
-  - '+.23us.la'
   - '+.23us.so'
   - '+.23us.tv'
   - '+.23us23us.com'
@@ -4120,7 +4119,6 @@ payload:
   - '+.5200wx.com'
   - '+.520101.com'
   - '+.520520520520520.com'
-  - '+.520520bo.com'
   - '+.52091w.com'
   - '+.520990.com'
   - '+.520apk.com'
@@ -5546,7 +5544,6 @@ payload:
   - '+.77y4.com'
   - '+.77ys.com'
   - '+.77zn.com'
-  - '+.780.com'
   - '+.782yx.com'
   - '+.78302.com'
   - '+.78360.net'
@@ -6353,7 +6350,6 @@ payload:
   - '+.91ndeh.xyz'
   - '+.91ninthpalace.com'
   - '+.91nzh.com'
-  - '+.91open.com'
   - '+.91pandian.com'
   - '+.91paobao.com'
   - '+.91pdf.com'
@@ -6510,7 +6506,6 @@ payload:
   - '+.93cg.com'
   - '+.93eu.com'
   - '+.93hdw9.com'
-  - '+.93hui.com'
   - '+.93jiang.com'
   - '+.93jx.net'
   - '+.93kk.com'
@@ -6962,7 +6957,6 @@ payload:
   - '+.9skm.com'
   - '+.9sky.com'
   - '+.9sleep.org'
-  - '+.9stor.com'
   - '+.9syw.com'
   - '+.9taobao.com'
   - '+.9tax.com'
@@ -7535,6 +7529,7 @@ payload:
   - '+.ahteacher.com'
   - '+.ahtlbyby.com'
   - '+.ahtlgc.com'
+  - '+.ahtoc.com'
   - '+.ahtrain.com'
   - '+.ahuano.com'
   - '+.ahudows.com'
@@ -8627,6 +8622,7 @@ payload:
   - '+.apcdianyuan.com'
   - '+.apcdns.net'
   - '+.apclc.com'
+  - '+.apcso.com'
   - '+.apcupse.com'
   - '+.apdcdn.com'
   - '+.ape8.com'
@@ -9349,7 +9345,6 @@ payload:
   - '+.babybus.com'
   - '+.babybus.org'
   - '+.babycdn.com'
-  - '+.babylove.online'
   - '+.babymoro.com'
   - '+.babymozart.cc'
   - '+.babyqiming.com'
@@ -11392,6 +11387,7 @@ payload:
   - '+.boolaw.com'
   - '+.boole-tech.com'
   - '+.boolean93.com'
+  - '+.boolv.com'
   - '+.boomsense.com'
   - '+.boonwin.com'
   - '+.boooba.com'
@@ -14945,7 +14941,6 @@ payload:
   - '+.cmcc-ecs.com'
   - '+.cmcc.in'
   - '+.cmcm.com'
-  - '+.cmcm5.cc'
   - '+.cmcm5.com'
   - '+.cmcm55.cc'
   - '+.cmcmcdn.com'
@@ -15792,6 +15787,7 @@ payload:
   - '+.communicatte.com'
   - '+.comocloud.net'
   - '+.companydns.com'
+  - '+.compass-fit.jp'
   - '+.compassedu.hk'
   - '+.compevt.com'
   - '+.compgoo.com'
@@ -30109,7 +30105,6 @@ payload:
   - '+.ityuan.com'
   - '+.ityun.tech'
   - '+.ityxb.com'
-  - '+.itzcdn.com'
   - '+.itzhp.com'
   - '+.itziy.com'
   - '+.itzjj.com'
@@ -32517,7 +32512,6 @@ payload:
   - '+.jxage.com'
   - '+.jxal.net'
   - '+.jxbhwl.com'
-  - '+.jxbqmt.com'
   - '+.jxc4.com'
   - '+.jxcaipu.com'
   - '+.jxcb.net'
@@ -33208,7 +33202,6 @@ payload:
   - '+.ketm.vip'
   - '+.ketuimage.com'
   - '+.kevinems.com'
-  - '+.kevinhewu.com'
   - '+.kevinjiang.info'
   - '+.kevinlq.com'
   - '+.kexianggroup.com'
@@ -35458,6 +35451,7 @@ payload:
   - '+.linkbroad.com'
   - '+.linkbux.com'
   - '+.linkchant.com'
+  - '+.linkchic.com'
   - '+.linkease.com'
   - '+.linked-f.com'
   - '+.linkedbyx.com'
@@ -36080,7 +36074,6 @@ payload:
   - '+.longwisepr.com'
   - '+.longxi-tech.net'
   - '+.longxianwen.net'
-  - '+.longxingmedical.com'
   - '+.longxuan.ren'
   - '+.longygo.com'
   - '+.longyin.net'
@@ -36688,6 +36681,7 @@ payload:
   - '+.lyjunshi.com'
   - '+.lyjxwl.com'
   - '+.lykxm.com'
+  - '+.lylhkq.com'
   - '+.lymil.com'
   - '+.lynkco.com'
   - '+.lynlzqy.com'
@@ -37613,7 +37607,6 @@ payload:
   - '+.meitaotaoo.com'
   - '+.meitegou.com'
   - '+.meitianhui.com'
-  - '+.meitibijia.com'
   - '+.meitong.org'
   - '+.meitu.com'
   - '+.meituan.com'
@@ -37945,6 +37938,7 @@ payload:
   - '+.microwear.com'
   - '+.microwu.com'
   - '+.microyan.com'
+  - '+.microzuji.com'
   - '+.micstatic.com'
   - '+.micw.com'
   - '+.midaapi.com'
@@ -38819,6 +38813,8 @@ payload:
   - '+.mrkevin.net'
   - '+.mrlika.com'
   - '+.mro9.com'
+  - '+.mross022.com'
+  - '+.mross044.com'
   - '+.mrpyq.com'
   - '+.mrqf.com'
   - '+.mrsta.com'
@@ -39025,6 +39021,7 @@ payload:
   - '+.mwryx.com'
   - '+.mwyzhcdn.com'
   - '+.mx-industry.com'
+  - '+.mx007.com'
   - '+.mx175.com'
   - '+.mx3g.com'
   - '+.mxarts.com'
@@ -41761,7 +41758,6 @@ payload:
   - '+.pf110.com'
   - '+.pf168.com'
   - '+.pf178.com'
-  - '+.pf999.net'
   - '+.pfchai.com'
   - '+.pfhoo.com'
   - '+.pfwx.com'
@@ -42870,7 +42866,6 @@ payload:
   - '+.qdhmsoft.com'
   - '+.qdhsty.com'
   - '+.qdingnet.com'
-  - '+.qdjiejie.com'
   - '+.qdjimo.com'
   - '+.qdjjwsjf.com'
   - '+.qdjxhz.com'
@@ -44225,6 +44220,7 @@ payload:
   - '+.qxbnkj.com'
   - '+.qxbx.com'
   - '+.qxcu.com'
+  - '+.qxdaojia.com'
   - '+.qxiu.com'
   - '+.qxka.com'
   - '+.qxkp.net'
@@ -50611,6 +50607,7 @@ payload:
   - '+.tianmaying.com'
   - '+.tianmidian.com'
   - '+.tianmu.mobi'
+  - '+.tianmunews.com'
   - '+.tianmupe.com'
   - '+.tianmupr.com'
   - '+.tiann90.com'
@@ -52061,7 +52058,6 @@ payload:
   - '+.txtbook.net'
   - '+.txtduo.com'
   - '+.txttool.com'
-  - '+.txtv162.me'
   - '+.txwb.com'
   - '+.txweekly.com'
   - '+.txwestart.com'
@@ -52189,6 +52185,7 @@ payload:
   - '+.u22066.com'
   - '+.u22077.com'
   - '+.u22088.com'
+  - '+.u22099.com'
   - '+.u22e.com'
   - '+.u23011.com'
   - '+.u23022.com'
@@ -52204,6 +52201,7 @@ payload:
   - '+.u3v3.com'
   - '+.u51.com'
   - '+.u520.net'
+  - '+.u55011.com'
   - '+.u58.com'
   - '+.u5wan.com'
   - '+.u69cn.com'
@@ -52781,6 +52779,7 @@ payload:
   - '+.uu456.com'
   - '+.uu55.tv'
   - '+.uu66.com'
+  - '+.uu8281uu.com'
   - '+.uu89.com'
   - '+.uu898.com'
   - '+.uuaa.net'
@@ -61204,7 +61203,6 @@ payload:
   - '+.yunip.com'
   - '+.yunipo.com'
   - '+.yunji.com'
-  - '+.yunjiale.net'
   - '+.yunjian.com'
   - '+.yunjiasu-cdn.net'
   - '+.yunjiasu.com'
@@ -62511,6 +62509,7 @@ payload:
   - '+.zhenwu.com'
   - '+.zhenxiad.com'
   - '+.zhenxian.fm'
+  - '+.zhenxinfu.com'
   - '+.zhenxingkuangchanpin.com'
   - '+.zhenyouliao.com'
   - '+.zhenyouweb.com'
