--- a/directbak.yaml
+++ b/directbak.yaml
@@ -4451,6 +4451,7 @@ payload:
   - '+.550400.com'
   - '+.5507p.com'
   - '+.550891.com'
+  - '+.5510928.com'
   - '+.55178.com'
   - '+.55188.com'
   - '+.5523.com'
@@ -4727,6 +4728,7 @@ payload:
   - '+.59pk.net'
   - '+.59store.com'
   - '+.59w.net'
+  - '+.59wanmei.com'
   - '+.59wj.com'
   - '+.59yx.com'
   - '+.5a8.org'
@@ -4875,6 +4877,7 @@ payload:
   - '+.5stmt.com'
   - '+.5sw.com'
   - '+.5tangs.com'
+  - '+.5tdalmui.cfd'
   - '+.5teacher.com'
   - '+.5thhospital.com'
   - '+.5thspace.net'
@@ -4932,7 +4935,6 @@ payload:
   - '+.607.tv'
   - '+.6070.tv'
   - '+.6071.com'
-  - '+.607777.cc'
   - '+.608.com'
   - '+.608.vip'
   - '+.608082.com'
@@ -5328,7 +5330,6 @@ payload:
   - '+.7082.com'
   - '+.70dh.com'
   - '+.70dir.com'
-  - '+.70fq.com'
   - '+.70god.com'
   - '+.70mao.com'
   - '+.70ppt.com'
@@ -8075,7 +8076,6 @@ payload:
   - '+.aliunicorn.com'
   - '+.aliuv.com'
   - '+.alivecdn.com'
-  - '+.alivl.com'
   - '+.alivv.com'
   - '+.alivv.net'
   - '+.aliway.com'
@@ -10121,6 +10121,7 @@ payload:
   - '+.beidoou.com'
   - '+.beidou.org'
   - '+.beidou66.com'
+  - '+.beidouchong.com'
   - '+.beidouone.com'
   - '+.beidousafety.org'
   - '+.beidouxingxueche.com'
@@ -11216,6 +11217,7 @@ payload:
   - '+.bmpj.net'
   - '+.bmqy.net'
   - '+.bmrtech.com'
+  - '+.bms16.com'
   - '+.bmshow.com'
   - '+.bmtcled.com'
   - '+.bmvps.com'
@@ -12634,6 +12636,7 @@ payload:
   - '+.cdbsfund.com'
   - '+.cdbybo.com'
   - '+.cdccpit.org'
+  - '+.cdcd.plus'
   - '+.cdcgames.net'
   - '+.cdchuandong.com'
   - '+.cdcoslm.com'
@@ -20365,6 +20368,7 @@ payload:
   - '+.eprezi.com'
   - '+.eps114.com'
   - '+.epschool.net'
+  - '+.epsonconnect.com'
   - '+.epstsoft.com'
   - '+.epub360.com'
   - '+.epubchina.com'
@@ -21031,6 +21035,7 @@ payload:
   - '+.fangxuela.com'
   - '+.fangyb.com'
   - '+.fangyi.com'
+  - '+.fangyiai.com'
   - '+.fangying.tv'
   - '+.fangyou.com'
   - '+.fangyouquan.com'
@@ -25617,6 +25622,7 @@ payload:
   - '+.hcicloud.com'
   - '+.hcjsk120.com'
   - '+.hcl100.com'
+  - '+.hclouder.com'
   - '+.hcmiraefund.com'
   - '+.hcnamecdn.com'
   - '+.hcnamecdns.com'
@@ -28919,6 +28925,7 @@ payload:
   - '+.ihaiu.com'
   - '+.ihalf.co'
   - '+.ihanbridge.com'
+  - '+.ihang360.com'
   - '+.ihanghai.com'
   - '+.ihanhua.com'
   - '+.ihani.tv'
@@ -30509,6 +30516,7 @@ payload:
   - '+.jdcloudcs.com'
   - '+.jdcloudedge.com'
   - '+.jdcloudnaming.net'
+  - '+.jdcloudshop.com'
   - '+.jdcloudstatic.com'
   - '+.jdcloudstatic.net'
   - '+.jdcloudstatus.net'
@@ -36116,6 +36124,7 @@ payload:
   - '+.loongsin.com'
   - '+.loongson.org'
   - '+.loongsonclub.com'
+  - '+.loongxy.com'
   - '+.looooker.com'
   - '+.loopjump.com'
   - '+.looquan.com'
@@ -36704,6 +36713,7 @@ payload:
   - '+.lytoufang.com'
   - '+.lytpw.com'
   - '+.lytuchuang10.com'
+  - '+.lytuchuang12.com'
   - '+.lytuchuang2.com'
   - '+.lytuchuang3.com'
   - '+.lytuchuang4.com'
@@ -43331,6 +43341,7 @@ payload:
   - '+.qingclass.com'
   - '+.qingclasscdn.com'
   - '+.qingcloud.com'
+  - '+.qingcongxiaoyuan.com'
   - '+.qingdaochina.org'
   - '+.qingdaograndtheatre.com'
   - '+.qingdaogxt.com'
@@ -43689,6 +43700,7 @@ payload:
   - '+.qnydns.com'
   - '+.qnydns.net'
   - '+.qodro.com'
+  - '+.qolai.com'
   - '+.qooboo.com'
   - '+.qoocc.com'
   - '+.qooic.com'
@@ -44299,6 +44311,7 @@ payload:
   - '+.qzccbank.com'
   - '+.qzcklm.com'
   - '+.qzclfc.com'
+  - '+.qzdatasoft.com'
   - '+.qzdyyy.com'
   - '+.qzh56.com'
   - '+.qzhlkj.net'
@@ -45840,7 +45853,6 @@ payload:
   - '+.sdqmy.com'
   - '+.sdqoi2d.com'
   - '+.sdrcu.com'
-  - '+.sdrgd.com'
   - '+.sdsgwy.com'
   - '+.sdshshb.com'
   - '+.sdsmefina.com'
@@ -47890,6 +47902,7 @@ payload:
   - '+.smartwebee.com'
   - '+.smartx-cn.com'
   - '+.smartx.com'
+  - '+.smartxiantao.com'
   - '+.smartyao.com'
   - '+.smartyoke.com'
   - '+.smarun.com'
@@ -55662,6 +55675,7 @@ payload:
   - '+.woyoujk.com'
   - '+.woyouquan.net'
   - '+.wozaijia.com'
+  - '+.wozaixiaoyuan.com'
   - '+.wozhangwan.com'
   - '+.wozhua.mobi'
   - '+.wozhuan.com'
@@ -57189,6 +57203,7 @@ payload:
   - '+.xiaoyouxiqun.com'
   - '+.xiaoyouzb.net'
   - '+.xiaoyu.com'
+  - '+.xiaoyuanyun2.com'
   - '+.xiaoyuanzhao.com'
   - '+.xiaoyuanzhaopin.net'
   - '+.xiaoyuer.com'
@@ -57772,6 +57787,7 @@ payload:
   - '+.xiwangchina.com'
   - '+.xiwangd.com'
   - '+.xiwanglife.com'
+  - '+.xiwangxiaoyuan.com'
   - '+.xiwantrip.com'
   - '+.xiwenquan.com'
   - '+.xiwnn.com'
@@ -59234,6 +59250,7 @@ payload:
   - '+.yeduxiaoshuo.com'
   - '+.yee5.com'
   - '+.yeeaoo.com'
+  - '+.yeecai.com'
   - '+.yeecall.com'
   - '+.yeecin.com'
   - '+.yeecloud.com'
@@ -59624,6 +59641,7 @@ payload:
   - '+.yilianyixue.com'
   - '+.yilibabyclub.com'
   - '+.yilihuo.com'
+  - '+.yiliit.com'
   - '+.yilijet.com'
   - '+.yilingshop.com'
   - '+.yilinguoji.com'
@@ -60773,7 +60791,6 @@ payload:
   - '+.yscb.net'
   - '+.ysch.cc'
   - '+.yscq.com'
-  - '+.yse360.cc'
   - '+.ysedu.com'
   - '+.ysepan.com'
   - '+.ysepay.com'
@@ -60868,7 +60885,6 @@ payload:
   - '+.ytusmart.com'
   - '+.ytxedu.com'
   - '+.ytxsc.com'
-  - '+.ytyug.com'
   - '+.ytzhihui.com'
   - '+.ytzq.com'
   - '+.yu-ding.net'
@@ -61491,6 +61507,7 @@ payload:
   - '+.yxhjt.com'
   - '+.yxhqj.com'
   - '+.yxi.cc'
+  - '+.yxiangzu.com'
   - '+.yxiannetgz.com'
   - '+.yximgs.com'
   - '+.yxin18.com'
@@ -61759,6 +61776,7 @@ payload:
   - '+.zampdsp.com'
   - '+.zamplink.net'
   - '+.zamplus.com'
+  - '+.zanao.com'
   - '+.zanba.com'
   - '+.zanbai.com'
   - '+.zangaifamily.com'
