--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2745,7 +2745,6 @@ payload:
   - '+.360jzhm.com'
   - '+.360kad.com'
   - '+.360kan.com'
-  - '+.360kb.com'
   - '+.360ksbd.com'
   - '+.360kuai.com'
   - '+.360kuaixue.com'
@@ -5316,7 +5315,6 @@ payload:
   - '+.70.com'
   - '+.700bike.com'
   - '+.700live.com'
-  - '+.700static.com'
   - '+.701.com'
   - '+.7017k.com'
   - '+.701sou.com'
@@ -5359,7 +5357,6 @@ payload:
   - '+.71big.net'
   - '+.71dm.com'
   - '+.71e.com'
-  - '+.71edge.com'
   - '+.71k.com'
   - '+.71lady.com'
   - '+.71lady.net'
@@ -6775,7 +6772,6 @@ payload:
   - '+.999120.net'
   - '+.999178.com'
   - '+.99934066.com'
-  - '+.99939.com'
   - '+.999777.com'
   - '+.9998.tv'
   - '+.99988866.xyz'
@@ -7929,6 +7925,7 @@ payload:
   - '+.akppt.net'
   - '+.akr-developers.com'
   - '+.akscan.com'
+  - '+.akspeedy.com'
   - '+.akswe.com'
   - '+.aksxw.com'
   - '+.aku.pub'
@@ -11547,7 +11544,6 @@ payload:
   - '+.bsrczpw.com'
   - '+.bsrkt.com'
   - '+.bssrvdns.com'
-  - '+.bst24.com'
   - '+.bstatics.com'
   - '+.bsteel.net'
   - '+.bstinfo.com'
@@ -13804,6 +13800,7 @@ payload:
   - '+.chinaeic.net'
   - '+.chinaeinet.com'
   - '+.chinaeinv.com'
+  - '+.chinaembassy.at'
   - '+.chinaemed.com'
   - '+.chinaequity.net'
   - '+.chinaerman.com'
@@ -13945,6 +13942,7 @@ payload:
   - '+.chinaliyou.com'
   - '+.chinalm.org'
   - '+.chinalongmai.net'
+  - '+.chinalowcarb.com'
   - '+.chinalsjt.com'
   - '+.chinalubricant.com'
   - '+.chinalure.com'
@@ -16565,7 +16563,6 @@ payload:
   - '+.customsapp.com'
   - '+.cut35.com'
   - '+.cutecomm.com'
-  - '+.cutefish.org'
   - '+.cutefishos.com'
   - '+.cuteng.com'
   - '+.cutercounter.com'
@@ -24255,6 +24252,7 @@ payload:
   - '+.guowaitianqi.com'
   - '+.guoweitong.com'
   - '+.guoxiehao.com'
+  - '+.guoxinlanqiao.com'
   - '+.guoxinqh.com'
   - '+.guoxue.com'
   - '+.guoxue123.com'
@@ -25317,7 +25315,6 @@ payload:
   - '+.harborhousehome.com'
   - '+.hardkr.com'
   - '+.hardspell.com'
-  - '+.hareric.com'
   - '+.hariogame.com'
   - '+.harlanc.vip'
   - '+.harmay.com'
@@ -27095,6 +27092,7 @@ payload:
   - '+.hsyfcenter.com'
   - '+.hsysupply.com'
   - '+.hsyuntai.com'
+  - '+.hsyunyi.com'
   - '+.hsyyf.me'
   - '+.hszhizhen.net'
   - '+.hszk.org'
@@ -29927,7 +29925,6 @@ payload:
   - '+.itbkz.com'
   - '+.itblw.com'
   - '+.itbole.com'
-  - '+.itbook5.com'
   - '+.itboth.com'
   - '+.itbour.com'
   - '+.itboy.net'
@@ -31399,6 +31396,7 @@ payload:
   - '+.jiqimao.com'
   - '+.jiqirenku.com'
   - '+.jiqizhixin.com'
+  - '+.jiqrxx.com'
   - '+.jirengu.com'
   - '+.jirou.com'
   - '+.jirou.org'
@@ -35867,6 +35865,7 @@ payload:
   - '+.lncnw.com'
   - '+.lndao.com'
   - '+.lndhdx.com'
+  - '+.lndwkj.com'
   - '+.lnemci.com'
   - '+.lnest.com'
   - '+.lnfw.net'
@@ -39545,6 +39544,7 @@ payload:
   - '+.nbpolytheatre.com'
   - '+.nbrj.com'
   - '+.nbrlzy.com'
+  - '+.nbrz.site'
   - '+.nbsason.com'
   - '+.nbshuoxue.com'
   - '+.nbsqbank.com'
@@ -45380,7 +45380,6 @@ payload:
   - '+.sakway.com'
   - '+.salasolo.com'
   - '+.saleoilpaintings.com'
-  - '+.salestalk.xyz'
   - '+.salogs.com'
   - '+.salonglong.com'
   - '+.salongweb.com'
@@ -47751,7 +47750,6 @@ payload:
   - '+.skyfollowsnow.pro'
   - '+.skyfont.com'
   - '+.skyfox.org'
-  - '+.skygho.com'
   - '+.skyheng.com'
   - '+.skyju.cc'
   - '+.skylerzhang.com'
@@ -50656,15 +50654,12 @@ payload:
   - '+.tianya.com'
   - '+.tianya.tv'
   - '+.tianya999.com'
-  - '+.tianyablog.com'
-  - '+.tianyaclub.com'
   - '+.tianyaluedu.com'
   - '+.tianyana.com'
   - '+.tianyancha.com'
   - '+.tianyanqifu.com'
   - '+.tianyant.com'
   - '+.tianyaruanwen.com'
-  - '+.tianyaui.com'
   - '+.tianyecollege.com'
   - '+.tianyi1368.com'
   - '+.tianyibook.com'
@@ -52391,7 +52386,6 @@ payload:
   - '+.uiiiuiii.com'
   - '+.uil.ink'
   - '+.uileader.com'
-  - '+.uilover.com'
   - '+.uimaker.com'
   - '+.uimix.com'
   - '+.uincall.com'
@@ -55723,7 +55717,6 @@ payload:
   - '+.wscdns.org'
   - '+.wscloudcdn.com'
   - '+.wscloudcdn.org'
-  - '+.wsclouddns.com'
   - '+.wscloudsec.com'
   - '+.wscont1.apps.microsoft.com'
   - '+.wscont2.apps.microsoft.com'
@@ -56337,7 +56330,6 @@ payload:
   - '+.xahb.com'
   - '+.xahhp.com'
   - '+.xahuapu.net'
-  - '+.xahunter.com'
   - '+.xaidc.com'
   - '+.xaigame.com'
   - '+.xainjo.com'
@@ -58869,7 +58861,6 @@ payload:
   - '+.yangdongjia.com'
   - '+.yangerxiao.com'
   - '+.yangfannie.com'
-  - '+.yangfd.com'
   - '+.yangguanjun.com'
   - '+.yangguiweihuo.com'
   - '+.yanghengjun.com'
@@ -59207,6 +59198,7 @@ payload:
   - '+.yeastar.com'
   - '+.yebaike.com'
   - '+.yebangyu.org'
+  - '+.yebaojiasu.com'
   - '+.yeboyzq.com'
   - '+.yecdn.com'
   - '+.yedingding.com'
@@ -60462,7 +60454,6 @@ payload:
   - '+.younet.com'
   - '+.younfor.com'
   - '+.young40.com'
-  - '+.youngfunding.co.uk'
   - '+.youngor.com'
   - '+.youni.im'
   - '+.youo.net'
@@ -62264,6 +62255,7 @@ payload:
   - '+.zhangread.com'
   - '+.zhangrunnan.com'
   - '+.zhangsenhao.com'
+  - '+.zhangsh08.com'
   - '+.zhangshengrong.com'
   - '+.zhangtielei.com'
   - '+.zhangtu.com'
