--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2342,7 +2342,6 @@ payload:
   - '+.2gdt.com'
   - '+.2gei.com'
   - '+.2google.com'
-  - '+.2gxw.com'
   - '+.2hanju.com'
   - '+.2hanjutv.com'
   - '+.2haohr.com'
@@ -2921,7 +2920,6 @@ payload:
   - '+.36nu.com'
   - '+.36ve.net'
   - '+.36yc.com'
-  - '+.36yh.com'
   - '+.37.com'
   - '+.37088924.cc'
   - '+.370fd.com'
@@ -4599,7 +4597,6 @@ payload:
   - '+.580tequan.com'
   - '+.58160.com'
   - '+.58199.com'
-  - '+.582582.com'
   - '+.582hr.com'
   - '+.583go.com'
   - '+.58553v.com'
@@ -5540,7 +5537,6 @@ payload:
   - '+.78302.com'
   - '+.78360.net'
   - '+.7881.com'
-  - '+.788511.com'
   - '+.788899.com'
   - '+.788v.com'
   - '+.78901.net'
@@ -5766,7 +5762,6 @@ payload:
   - '+.80juqing.com'
   - '+.80kongjian.com'
   - '+.80kuku.com'
-  - '+.80nb.com'
   - '+.80paper.com'
   - '+.80s.im'
   - '+.80s.tw'
@@ -10210,7 +10205,6 @@ payload:
   - '+.bengou.com'
   - '+.bengrong.com'
   - '+.bengtie.com'
-  - '+.benhu.cc'
   - '+.benhu01.com'
   - '+.beniao.com'
   - '+.benjamin.fun'
@@ -10235,6 +10229,7 @@ payload:
   - '+.bequgew.com'
   - '+.bequgexs.com'
   - '+.bequgezw.com'
+  - '+.berfen.com'
   - '+.berlinchan.com'
   - '+.berlinix.com'
   - '+.berqin.com'
@@ -14220,6 +14215,7 @@ payload:
   - '+.chingkun.com'
   - '+.chingli.com'
   - '+.chingmi.com'
+  - '+.chinjpd.com'
   - '+.chinlingo.com'
   - '+.chint.com'
   - '+.chint.net'
@@ -18264,6 +18260,7 @@ payload:
   - '+.djzhj.com'
   - '+.djzr88.com'
   - '+.djzxn47.com'
+  - '+.dkazpc.cfd'
   - '+.dkdangle.com'
   - '+.dkjiaoyang.com'
   - '+.dklogs.net'
@@ -21134,6 +21131,7 @@ payload:
   - '+.farmkd.com'
   - '+.farmsec.com'
   - '+.farsee2.com'
+  - '+.fas-bee.com'
   - '+.fashaoyou.net'
   - '+.fasheng.org'
   - '+.fashengba.com'
@@ -21450,6 +21448,7 @@ payload:
   - '+.fengxuan.co'
   - '+.fengxuelin.com'
   - '+.fengyan.cc'
+  - '+.fengyeji.com'
   - '+.fengyitong.name'
   - '+.fengyu.moe'
   - '+.fengyuansufen.com'
@@ -22924,6 +22923,7 @@ payload:
   - '+.gdstlab.com'
   - '+.gdswine.com'
   - '+.gdsxgd.com'
+  - '+.gdsytech.com'
   - '+.gdszjgdj.org'
   - '+.gdtai.com'
   - '+.gdtaihao.com'
@@ -27724,7 +27724,6 @@ payload:
   - '+.hunliji.com'
   - '+.hunlimao.com'
   - '+.hunmiao.com'
-  - '+.hunshitong.net'
   - '+.hunt007.com'
   - '+.huntchance.com'
   - '+.huntic.com'
@@ -30304,7 +30303,6 @@ payload:
   - '+.izumicn.com'
   - '+.j-h-k.com'
   - '+.j-smu.com'
-  - '+.j1.com'
   - '+.j1health.com'
   - '+.j5k6.com'
   - '+.j66.net'
@@ -34533,7 +34531,6 @@ payload:
   - '+.lawinfochina.com'
   - '+.lawlingyun.com'
   - '+.lawnewscn.com'
-  - '+.lawschina.com'
   - '+.lawtimeimg.com'
   - '+.lawxin.com'
   - '+.lawxp.com'
@@ -36103,6 +36100,7 @@ payload:
   - '+.loopjump.com'
   - '+.looquan.com'
   - '+.loorain.com'
+  - '+.loovee.com'
   - '+.looyu.com'
   - '+.looyuoms.com'
   - '+.looyush.com'
@@ -37690,6 +37688,7 @@ payload:
   - '+.mengzone.com'
   - '+.menhood.wang'
   - '+.menksoft.com'
+  - '+.menov.net'
   - '+.menpiao.com'
   - '+.menqiu.com'
   - '+.mentrends.com'
@@ -38114,7 +38113,6 @@ payload:
   - '+.mingstar.net'
   - '+.mingtaokeji.com'
   - '+.mingtian.com'
-  - '+.mingtrip.com'
   - '+.mingxiaodai.com'
   - '+.mingxing.com'
   - '+.mingxingku.com'
@@ -40122,6 +40120,7 @@ payload:
   - '+.nlzpy.com'
   - '+.nm8yx.com'
   - '+.nmbxd1.com'
+  - '+.nmcjdo04.xyz'
   - '+.nmet168.com'
   - '+.nmgchigang.com'
   - '+.nmgd.com'
@@ -42358,7 +42357,6 @@ payload:
   - '+.ppbizon.com'
   - '+.ppcall.com'
   - '+.ppchuguan.com'
-  - '+.ppcn.net'
   - '+.ppcode.com'
   - '+.ppcost.com'
   - '+.ppdai.com'
@@ -43988,7 +43986,6 @@ payload:
   - '+.quclouds.com'
   - '+.qudah5.com'
   - '+.qudao.com'
-  - '+.qudao.info'
   - '+.qudao168.com'
   - '+.qudaowuyou.com'
   - '+.qudaowuyou04.com'
@@ -46581,7 +46578,6 @@ payload:
   - '+.shenliyang.com'
   - '+.shenma.com'
   - '+.shenmadsp.com'
-  - '+.shenmamov.cc'
   - '+.shenmayouxi.com'
   - '+.shenmikj.com'
   - '+.shenmou.com'
@@ -48637,6 +48633,7 @@ payload:
   - '+.stat18.com'
   - '+.static.cdnetworks.com'
   - '+.static.eprintsw.com'
+  - '+.static.yangfd.com'
   - '+.staticaa.com'
   - '+.staticdn.net'
   - '+.staticec.com'
@@ -49989,7 +49986,6 @@ payload:
   - '+.taou.com'
   - '+.taowola.com'
   - '+.taoxiaolu.com'
-  - '+.taoxiaozhong.com'
   - '+.taoxie.com'
   - '+.taoxuemei.com'
   - '+.taoxv.com'
@@ -52618,6 +52614,7 @@ payload:
   - '+.upin.com'
   - '+.upkao.com'
   - '+.uplinux.com'
+  - '+.upload.yangfd.com'
   - '+.uplookedu.com'
   - '+.uplooking.com'
   - '+.upnb.com'
@@ -57171,7 +57168,6 @@ payload:
   - '+.xiaozaixiao.com'
   - '+.xiaozhan.cc'
   - '+.xiaozhang365.com'
-  - '+.xiaozhaolaila.com'
   - '+.xiaozhewz.com'
   - '+.xiaozhibaoxian.com'
   - '+.xiaozhibo.com'
@@ -57875,6 +57871,7 @@ payload:
   - '+.xkw.com'
   - '+.xkwe.com'
   - '+.xkxiazai.com'
+  - '+.xkyl.vip'
   - '+.xkyn.com'
   - '+.xkyn.net'
   - '+.xkzzz.com'
@@ -58075,7 +58072,6 @@ payload:
   - '+.xnongren.com'
   - '+.xnpic.com'
   - '+.xns315.com'
-  - '+.xnsla.com'
   - '+.xntt.com'
   - '+.xntv.tv'
   - '+.xnw.com'
@@ -58094,6 +58090,7 @@ payload:
   - '+.xox9325.com'
   - '+.xoxknct.com'
   - '+.xoxv.net'
+  - '+.xoxxoo.com'
   - '+.xoyo.com'
   - '+.xoyobox.com'
   - '+.xoyocdn.com'
@@ -59492,6 +59489,7 @@ payload:
   - '+.yifake.com'
   - '+.yifanghy.com'
   - '+.yifanmedia.net'
+  - '+.yifanshangplus.com'
   - '+.yifansuo.com'
   - '+.yifatong.com'
   - '+.yifei.com'
@@ -62782,7 +62780,6 @@ payload:
   - '+.zhongbingtongxin.com'
   - '+.zhongbowenwu.com'
   - '+.zhongboxinwen.com'
-  - '+.zhongcaishuiwu.com'
   - '+.zhongchebaolian.com'
   - '+.zhongchoujia.com'
   - '+.zhongchouke.com'
