--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3581,9 +3581,12 @@ payload:
   - '+.517huwai.com'
   - '+.517idc.com'
   - '+.517japan.com'
+  - '+.517la.com'
+  - '+.517la.net'
   - '+.517lppz.com'
   - '+.517ming.com'
   - '+.517mr.com'
+  - '+.517na.com'
   - '+.517rcw.com'
   - '+.517sc.com'
   - '+.517tez.com'
@@ -18618,7 +18621,6 @@ payload:
   - '+.dongqiudi.com'
   - '+.dongqiudi.net'
   - '+.dongsenzs.com'
-  - '+.dongshenghuiyang.com'
   - '+.dongshou.com'
   - '+.dongsport.com'
   - '+.dongtaijt.com'
@@ -34357,6 +34359,7 @@ payload:
   - '+.lanrenzhaofang.com'
   - '+.lanrenzhijia.com'
   - '+.lanrenzhoumo.com'
+  - '+.lansancn.com'
   - '+.lansedongli.com'
   - '+.lansha.tv'
   - '+.lanshanweb.com'
@@ -38468,7 +38471,6 @@ payload:
   - '+.moeli123.com'
   - '+.moemiao.net'
   - '+.moeover.com'
-  - '+.moerail.ml'
   - '+.moerkeji.net'
   - '+.moerlong.com'
   - '+.moetu.org'
@@ -39385,7 +39387,6 @@ payload:
   - '+.namisoft.com'
   - '+.namitiyu.com'
   - '+.namoc.org'
-  - '+.nanadao.com'
   - '+.nanapro.org'
   - '+.nanbeijt.com'
   - '+.nanbeiyou.com'
@@ -40766,6 +40767,7 @@ payload:
   - '+.onche.net'
   - '+.oncity.cc'
   - '+.one-all.com'
+  - '+.one-netbook.com'
   - '+.one918.com'
   - '+.onealert.com'
   - '+.oneapm.com'
@@ -40860,6 +40862,7 @@ payload:
   - '+.oomake.com'
   - '+.ooniu.com'
   - '+.ooogo.com'
+  - '+.ooooai.com'
   - '+.ooopic.com'
   - '+.ooopn.com'
   - '+.ooppoo.com'
@@ -48878,7 +48881,6 @@ payload:
   - '+.sun0769.com'
   - '+.sun0769ns.com'
   - '+.sun0816.com'
-  - '+.sun19.com'
   - '+.sun66.net'
   - '+.sunacctg.com'
   - '+.sunater.com'
@@ -52414,6 +52416,7 @@ payload:
   - '+.umaman.com'
   - '+.umbpay.com'
   - '+.umcloud.com'
+  - '+.umdac.com'
   - '+.umeng.co'
   - '+.umeng.com'
   - '+.umeng.online'
