--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3452,7 +3452,6 @@ payload:
   - '+.4u4v.net'
   - '+.4v6k.com'
   - '+.4w8.net'
-  - '+.4xiazai.com'
   - '+.4xseo.com'
   - '+.4y4.net'
   - '+.4ye.cc'
@@ -9304,7 +9303,6 @@ payload:
   - '+.b8yx.com'
   - '+.ba-li.com'
   - '+.baalchina.net'
-  - '+.baba.cc'
   - '+.bababian.com'
   - '+.bababus.com'
   - '+.babaike.com'
@@ -14372,7 +14370,6 @@ payload:
   - '+.chuangduyouyue.com'
   - '+.chuangen.com'
   - '+.chuangfeixin.com'
-  - '+.chuangfutz.com'
   - '+.chuangjiangx.com'
   - '+.chuangkem.com'
   - '+.chuangkeup.com'
@@ -15741,7 +15738,6 @@ payload:
   - '+.comeken.com'
   - '+.comet.cc'
   - '+.comeyes.com'
-  - '+.comfortzone.hk'
   - '+.comiai.com'
   - '+.comic520.com'
   - '+.comicdd.com'
@@ -17327,7 +17323,6 @@ payload:
   - '+.dazhewa.com'
   - '+.dazhongbanben.com'
   - '+.dazhonghr.com'
-  - '+.dazhoudz8.com'
   - '+.dazhoumzj.com'
   - '+.dazhoushan.com'
   - '+.dazhuangwang.com'
@@ -18908,6 +18903,7 @@ payload:
   - '+.dropsec.xyz'
   - '+.drouma.com'
   - '+.drscrewdriver.com'
+  - '+.drscrm.com'
   - '+.drtyf.com'
   - '+.drugfuture.com'
   - '+.druggcp.net'
@@ -19528,6 +19524,7 @@ payload:
   - '+.eastchinafair.com'
   - '+.eastcom-sw.com'
   - '+.eastcom.com'
+  - '+.eastcom.site'
   - '+.eastcompeace.com'
   - '+.eastcoms.com'
   - '+.eastday.com'
@@ -22359,7 +22356,6 @@ payload:
   - '+.fxcw.com'
   - '+.fxdm.net'
   - '+.fxdp.com'
-  - '+.fxhose.com'
   - '+.fxian.org'
   - '+.fxiaoke.com'
   - '+.fxl1950.com'
@@ -29194,7 +29190,6 @@ payload:
   - '+.imekaku.com'
   - '+.imeme.tv'
   - '+.imesong.com'
-  - '+.imever.me'
   - '+.imeyahair.com'
   - '+.imfirewall.com'
   - '+.img-space.com'
@@ -33348,7 +33343,6 @@ payload:
   - '+.kjdb.org'
   - '+.kjeport.com'
   - '+.kjiuye.com'
-  - '+.kjj.com'
   - '+.kjjl100.com'
   - '+.kjkd.com'
   - '+.kjkp.com'
@@ -34236,7 +34230,6 @@ payload:
   - '+.laixuexi.cc'
   - '+.laiyagushi.com'
   - '+.laiyetxt.com'
-  - '+.laiyexs.com'
   - '+.laiyifen.com'
   - '+.laiyouxi.com'
   - '+.laiyunad.com'
@@ -34912,7 +34905,6 @@ payload:
   - '+.levelinfinite.com'
   - '+.leviding.com'
   - '+.lewaimai.com'
-  - '+.lewanduo.com'
   - '+.lewang.ltd'
   - '+.leweicn.com'
   - '+.lewen.la'
@@ -35007,6 +34999,7 @@ payload:
   - '+.lgstatic.com'
   - '+.lguohe.com'
   - '+.lh-lx.com'
+  - '+.lh.link'
   - '+.lh168.net'
   - '+.lh310.com'
   - '+.lh75.com'
@@ -35143,7 +35136,6 @@ payload:
   - '+.libsou.com'
   - '+.libtop.com'
   - '+.libvideo.com'
-  - '+.libvio.cc'
   - '+.lic-bcbc.com'
   - '+.licai.com'
   - '+.licai18.com'
@@ -38124,6 +38116,7 @@ payload:
   - '+.miniluck.com'
   - '+.mininglamp.com'
   - '+.miniprogramadmin.com'
+  - '+.minisforum.com'
   - '+.miniso.com'
   - '+.minisoyo.com'
   - '+.ministudy.com'
@@ -40022,7 +40015,6 @@ payload:
   - '+.nixiba.com'
   - '+.nixwang.com'
   - '+.nizhan888.com'
-  - '+.nizhanw.com'
   - '+.nizi88.com'
   - '+.nizkeyboard.com'
   - '+.nj-bl.com'
@@ -40250,6 +40242,7 @@ payload:
   - '+.nowcoder.com'
   - '+.nowcoder.net'
   - '+.nowec.com'
+  - '+.nowmsg.com'
   - '+.nowo.com'
   - '+.nowodds.com'
   - '+.nowre.com'
@@ -43838,6 +43831,7 @@ payload:
   - '+.qsmis.com'
   - '+.qspfw.com'
   - '+.qspfwadmin.com'
+  - '+.qsqssy.com'
   - '+.qss-lb.com'
   - '+.qssec.com'
   - '+.qstatic.com'
@@ -45361,7 +45355,6 @@ payload:
   - '+.salonglong.com'
   - '+.salongweb.com'
   - '+.salonwith.com'
-  - '+.salute88.com'
   - '+.samanlehua.com'
   - '+.same-tech.com'
   - '+.samebar.com'
@@ -48562,7 +48555,6 @@ payload:
   - '+.stackoverflow.wiki'
   - '+.stage1st.com'
   - '+.stage3rd.com'
-  - '+.staging.city'
   - '+.stajy.com'
   - '+.standardshop.net'
   - '+.star1024.com'
@@ -48765,7 +48757,6 @@ payload:
   - '+.subaotuan.com'
   - '+.subingkang.com'
   - '+.subinwechat.com'
-  - '+.sublimetextcn.com'
   - '+.subline.org'
   - '+.subo.net'
   - '+.subom.net'
@@ -50202,6 +50193,7 @@ payload:
   - '+.tel-id.com'
   - '+.telaideyouxue.com'
   - '+.teld.net'
+  - '+.telecomhb.com'
   - '+.telefen.com'
   - '+.telegtv.com'
   - '+.telehr.com'
@@ -51449,7 +51441,6 @@ payload:
   - '+.trucklc.com'
   - '+.trueart.com'
   - '+.truebuty.com'
-  - '+.truechat365.com'
   - '+.truedian.com'
   - '+.trueeyu.com'
   - '+.trueland.net'
@@ -53312,7 +53303,6 @@ payload:
   - '+.voccdn.com'
   - '+.vocinno.com'
   - '+.vodjk.com'
-  - '+.voflix.me'
   - '+.vohringer.com'
   - '+.voicedic.com'
   - '+.voicer.me'
@@ -53461,7 +53451,6 @@ payload:
   - '+.vtoutiao.cc'
   - '+.vtrois.com'
   - '+.vtuzx.com'
-  - '+.vu99.com'
   - '+.vue-js.com'
   - '+.vue5.com'
   - '+.vuejscaff.com'
@@ -57202,7 +57191,6 @@ payload:
   - '+.xidong.net'
   - '+.xidongv.com'
   - '+.xiduobaby.com'
-  - '+.xie-jue-tui-xiao.com'
   - '+.xiebao18.com'
   - '+.xieboke.net'
   - '+.xiechao.org'
@@ -57344,7 +57332,6 @@ payload:
   - '+.xinfenlei.com'
   - '+.xinfu888.com'
   - '+.xinfushe.com'
-  - '+.xinfuye.com'
   - '+.xing73.com'
   - '+.xingames.com'
   - '+.xingbangip.com'
@@ -58235,7 +58222,6 @@ payload:
   - '+.xuandan.com'
   - '+.xuande99.com'
   - '+.xuandecarpet.com'
-  - '+.xuandui.me'
   - '+.xuanfengge.com'
   - '+.xuanfengkeji.com'
   - '+.xuanhaikuwan.com'
@@ -61056,6 +61042,7 @@ payload:
   - '+.yunbiaozhun.com'
   - '+.yunbiji.com'
   - '+.yunbook.vip'
+  - '+.yunbuzhan.com'
   - '+.yuncai5.com'
   - '+.yuncaijing.com'
   - '+.yuncdn.bid'
@@ -63400,6 +63387,7 @@ payload:
   - '+.zjscs.com'
   - '+.zjshuo.com'
   - '+.zjsight.com'
+  - '+.zjsjtz.com'
   - '+.zjsr.com'
   - '+.zjstv.com'
   - '+.zjsxlt.com'
